<resources>
    <string name="app_name">VF-CAR</string>
    <string name="clientes">Clientes</string>
    <string name="vehiculos">Vehículos</string>
    <string name="trabajadores">Trabajadores</string>
    <string name="reparaciones">Reparaciones</string>
    <string name="servicios">Servicios</string>
    <string name="añadirReparacion">Crear Reparación</string>
    <string name="reparacionesCompletadas">Reparaciones Completadas</string>
    <string name="reparacionesPendientes">Reparaciones Pendientes</string>
    <string name="estadisticas">Estadísticas</string>
</resources>